# audiobook-podcast

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  audiobook-podcast.cabal  calibre-audiobook-podcast.cabal  calibre-audiobook.cabal  client_session_key.aes  dev.sh  package.yaml  profile.sh  routes  settings.yaml  settings.yaml.sample  stack.yaml
app/: Main.hs  devel.hs
assets/css/: app.css
config/: settings.yml
documentation/: HttpRanges.md
messages/: de.msg  en.msg
src/: Application.hs  Audiobook.hs  Background.hs  Controllers.hs  Conversion.hs  Database.hs  FFmpeg.hs  Foundation.hs  Import.hs  Library.hs  Main.hs  MonadConstraints.hs  MyMonadStack.hs  PictureTools.hs  Settings.hs  Types.hs  Views.hs  Zip.hs
src/Background/: Conversion.hs  Foundation.hs
src/Controllers/: Book.hs  Calibre.hs  Home.hs
src/Conversion/: Audiobook.hs  Step.hs  Steps.hs  Types.hs
src/Database/: Calibre.hs  Queries.hs  Tables.hs
src/Database/Calibre/: Audiobook.hs  BookFormat.hs  Format.hs  Queries.hs  Tables.hs  Types.hs
src/Handler/: Book.hs  BooksViews.hs  Conversion.hs  Library.hs  SendFile.hs  Series.hs  SeriesView.hs  SingleBook.hs
src/Import/: NoFoundation.hs
src/Settings/: StaticFiles.hs
static/css/: app.css  bootstrap-fs-modal.min.css
static/js/: app.js  package.json  tsconfig.json  webpack.common.js  webpack.dev.js
static/js/src/: index.ts  state.ts
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  index.hamlet
