name:                calibre-audiobook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felixscheinost/calibre-audiobook#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Scheinost
maintainer:          felix.scheinost@posteo.de
copyright:           2018 Felix Scheinost
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable calibre-audiobook
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , process
                     , aeson
                     , bytestring
