cabal-version: >= 1.10

name:           calibre-audiobook
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/felixscheinost/calibre-audiobook#readme>
homepage:       https://github.com/felixscheinost/calibre-audiobook#readme
bug-reports:    https://github.com/felixscheinost/calibre-audiobook/issues
author:         Felix Scheinost
maintainer:     felix.scheinost@posteo.de
copyright:      2018 Felix Scheinost
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    .gitignore
    stack.yaml
    README.md

source-repository head
  type: git
  location: https://github.com/felixscheinost/calibre-audiobook

executable calibre-audiobook
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  other-modules:
      Types
      Views
  build-depends:
      aeson
    , base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , filepath
    , optparse-applicative
    , scotty
    , sqlite-simple
    , text
    , transformers
    , wai
    , wai-extra
    , wai-middleware-static
    , process
  default-language: Haskell2010

